Added logic to check user login role and update name on page, updated treatments page and logic, added treatments service and page js to implement loading, creation and deletion logic, Edit logic is pending

--- a/frontend/appointments.html
+++ b/frontend/appointments.html
@@ -28,7 +28,7 @@
           <div class="dropdown">
             <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown">
               <i class="bi bi-person-circle"></i>
-              <span class="ms-2">Dr. Smith</span>
+              <span class="ms-2" id="userName">Guest</span>
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li>
