--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
           <div class="dropdown">
             <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown">
               <i class="bi bi-person-circle"></i>
-              <span class="ms-2">Dr. Smith</span>
+              <span class="ms-2" id="userName">Guest</span>
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li>
@@ -84,7 +84,7 @@
         <!-- Welcome Section -->
         <div class="row mb-4">
           <div class="col-12">
-            <h1 class="h3 mb-1">Welcome back, {{Name}}</h1>
+            <h1 class="h3 mb-1">Welcome back, <span id="dashboardUserName">Guest</span></h1>
           </div>
         </div>
 
@@ -258,5 +258,6 @@
 
     <!-- Custom JS -->
     <script src="js/custom.js"></script>
+    <script src="js/pages/index.js"></script>
   </body>
 </html>
