--- a/frontend/medical-records.html
+++ b/frontend/medical-records.html
@@ -29,7 +29,7 @@
           <div class="dropdown">
             <button class="btn btn-outline-light dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown">
               <i class="bi bi-person-circle"></i>
-              <span class="ms-2">Dr. Smith</span>
+              <span class="ms-2" id="userName">Guest</span>
             </button>
             <ul class="dropdown-menu dropdown-menu-end">
               <li>
@@ -65,9 +65,7 @@
           <a href="treatments.html" class="sidebar-nav-link"> <i class="bi bi-heart-pulse"></i><span class="nav-text">Treatments</span> </a>
         </li>
         <li class="sidebar-nav-item" id="medicalRecordsLink">
-          <a href="medical-records.html" class="sidebar-nav-link active">
-            <i class="bi bi-clipboard2-pulse"></i><span class="nav-text">Medical Records</span>
-          </a>
+          <a href="medical-records.html" class="sidebar-nav-link active"> <i class="bi bi-clipboard2-pulse"></i><span class="nav-text">Medical Records</span> </a>
         </li>
         <li class="sidebar-nav-item" id="pharmacyLink">
           <a href="pharmacy.html" class="sidebar-nav-link"> <i class="bi bi-capsule"></i><span class="nav-text">Pharmacy</span> </a>
