--- a/frontend/appointments.html
+++ b/frontend/appointments.html
@@ -89,31 +89,52 @@
             <div class="card">
               <div class="card-header"><h5 class="mb-0">New Appointment</h5></div>
               <div class="card-body">
-                <form id="appointmentForm">
+                <form id="newAppointmentForm">
                   <div class="mb-3">
-                    <label for="patientName" class="form-label">Patient Name</label>
-                    <input type="text" class="form-control" id="patientName" required />
+                    <label for="patientName" class="form-label">Your Name</label>
+                    <input type="text" class="form-control" id="patientName" required disabled readonly />
                   </div>
                   <div class="mb-3">
-                    <label for="reason" class="form-label">Treatment</label>
-                    <textarea class="form-control" id="reason" rows="2" required></textarea>
+                    <label for="treatmentSelect" class="form-label"> <i class="bi bi-briefcase me-2"></i>Treatment</label>
+                    <div class="dropdown">
+                      <button class="form-select text-start" type="button" id="treatmentSelect" data-bs-toggle="dropdown">
+                        <span class="text-muted">Select treatment</span>
+                      </button>
+                      <ul class="dropdown-menu" id="treatmentsSelectList"></ul>
+                    </div>
                   </div>
                   <div class="mb-3">
                     <label for="doctorName" class="form-label">Doctor</label>
-                    <input type="text" class="form-control" id="doctorName" required />
+                    <input type="text" class="form-control" id="doctorName" disabled readonly />
                   </div>
                   <div class="mb-3">
                     <label for="appointmentDate" class="form-label">Date</label>
-                    <input type="date" class="form-control" id="appointmentDate" required />
+                    <input type="date" class="form-control" id="appointmentDate" required placeholder="Select appointment date" />
                   </div>
                   <div class="mb-3">
                     <label for="appointmentTime" class="form-label">Time</label>
-                    <input type="time" class="form-control" id="appointmentTime" required />
+                    <div class="dropdown">
+                      <button class="form-select text-start" type="button" id="appointmentTime" data-bs-toggle="dropdown">
+                        <span class="text-muted">Select time</span>
+                      </button>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#" data-value="08:00">8:00 AM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="09:00">9:00 AM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="10:00">10:00 AM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="11:00">11:00 AM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="12:00">12:00 PM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="13:00">1:00 PM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="14:00">2:00 PM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="15:00">3:00 PM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="16:00">4:00 PM</a></li>
+                        <li><a class="dropdown-item" href="#" data-value="17:00">5:00 PM</a></li>
+                      </ul>
+                    </div>
                   </div>
 
                   <div class="mb-3">
-                    <label for="reason" class="form-label">Reason</label>
-                    <textarea class="form-control" id="reason" rows="2" required></textarea>
+                    <label for="appointmentReason" class="form-label">Reason</label>
+                    <textarea class="form-control" id="appointmentReason" rows="2" required></textarea>
                   </div>
                   <button type="submit" class="btn btn-primary w-100">Book Appointment</button>
                 </form>
@@ -122,7 +143,7 @@
           </div>
           <div class="col-lg-6 mb-4">
             <div class="card">
-              <div class="card-header"><h5 class="mb-0">Appointment Bookings</h5></div>
+              <div class="card-header"><h5 class="mb-0">My Appointment Bookings</h5></div>
               <div class="card-body">
                 <div class="table-responsive">
                   <table class="table table-bordered table-hover align-middle" id="appointmentsTable">
@@ -135,7 +156,7 @@
                         <th>Reason</th>
                       </tr>
                     </thead>
-                    <tbody></tbody>
+                    <tbody id="appointmentsTableBody"></tbody>
                   </table>
                 </div>
               </div>
@@ -149,46 +170,6 @@
 
     <script src="js/custom.js"></script>
     <script src="js/components/dropdown-handler.js"></script>
-
-    <!-- Custom JS -->
-    <script>
-      // Simple local appointment storage for demo
-      const form = document.getElementById("appointmentForm");
-      const tableBody = document.querySelector("#appointmentsTable tbody");
-      let appointments = JSON.parse(localStorage.getItem("vitals_appointments") || "[]");
-
-      function renderAppointments() {
-        tableBody.innerHTML = appointments
-          .map(
-            (app) => `
-          <tr>
-            <td>${app.patientName}</td>
-            <td>${app.doctorName}</td>
-            <td>${app.appointmentDate}</td>
-            <td>${app.appointmentTime}</td>
-            <td>${app.reason}</td>
-          </tr>
-        `
-          )
-          .join("");
-      }
-
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const newApp = {
-          patientName: form.patientName.value,
-          doctorName: form.doctorName.value,
-          appointmentDate: form.appointmentDate.value,
-          appointmentTime: form.appointmentTime.value,
-          reason: form.reason.value,
-        };
-        appointments.push(newApp);
-        localStorage.setItem("vitals_appointments", JSON.stringify(appointments));
-        renderAppointments();
-        form.reset();
-      });
-
-      renderAppointments();
-    </script>
+    <script type="module" src="js/pages/appointments.js"></script>
   </body>
 </html>
